[package]
name = "livy"
version = "0.0.3"
authors = ["Keiji Yoshida <kjmrknsn@gmail.com>"]
description = "Apache Livy REST API Client in Rust"
license = "MIT/Apache-2.0"
homepage = "https://crates.io/crates/livy"
repository = "https://github.com/kjmrknsn/livy-rs"
documentation = "https://docs.rs/livy"
readme = "README.md"
keywords = ["livy"]
categories = ["api-bindings", "command-line-utilities", "web-programming::http-client"]

[badges]
travis-ci = { repository = "kjmrknsn/livy-rs", branch = "master" }

[dependencies]
