[package]
name = "livy"
version = "0.0.7"
authors = ["Keiji Yoshida <kjmrknsn@gmail.com>"]
description = "Apache Livy REST API Client"
license = "MIT/Apache-2.0"
homepage = "https://crates.io/crates/livy"
repository = "https://github.com/kjmrknsn/livy-rs"
documentation = "https://docs.rs/livy"
readme = "README.md"
keywords = ["livy"]
categories = ["api-bindings", "command-line-utilities", "web-programming::http-client"]

[badges]
codecov = { repository = "kjmrknsn/livy-rs", branch = "master", service = "github" }
travis-ci = { repository = "kjmrknsn/livy-rs", branch = "master" }

[dependencies]
hyper = "0.11"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
