[package]
name = "livy"
version = "0.4.0"
authors = ["Keiji Yoshida <kjmrknsn@gmail.com>"]
description = "Apache Livy REST API Client"
license = "MIT/Apache-2.0"
homepage = "https://crates.io/crates/livy"
repository = "https://github.com/kjmrknsn/livy-rs"
documentation = "https://docs.rs/livy"
readme = "README.md"
keywords = ["livy"]
categories = ["api-bindings", "command-line-utilities", "web-programming::http-client"]

[badges]
travis-ci = { repository = "kjmrknsn/livy-rs", branch = "master" }

[dependencies]
curl = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
